--- a/packages/runner-ct/src/SpecList/spec-list.scss
+++ b/packages/runner-ct/src/SpecList/spec-list.scss
@@ -1,9 +1,10 @@
 .specs-list {
+  
   font-family: "Muli", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
   width: calc(100% - 40px);
   height: calc(100% - 10px);
-  overflow: scroll;
+  overflow:auto;
 }
 
 .specs-list-scroll-container {
